                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-07-2005 fixed: direct opening of SMB files if no SMB authentication information is in the url
 - 22-07-2005 updated: German language file
 - 22-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 22-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 22-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 21-07-2005 added: made HTTPAPI callable from Python scripts
 - 21-07-2005 added: warning dialog before tdata deletion. NEW KEY COMBINATION, INSTEAD OF START+BACK USE LTHUMBCLICK+RTHUMBCLICK.
 - 21-07-2005 fixed: dvd tray states could become wrong (empty when disc was present) with some pc dvdroms.
 - 20-07-2005 added: System.KaiConnected conditional visibility.
 - 20-07-2005 fixed: Various skin issues (thumbpanels + buttonscroller)
 - 20-07-2005 fixed: Vis as screensaver had issues on finish of song.
 - 20-07-2005 fixed: Framerate in video playback.
 - 20-07-2005 added: SITE HELP command.
 - 19-07-2005 fixed: iTunes streaming.
 - 19-07-2005 added: Ftp SITE commands to XBMC's builtin functions.
 - 19-07-2005 fixed: Settings weren't saved on app exit.
 - 19-07-2005 fixed: UTF16 RSS feeds should at least display (no idea if they'll look as they're supposed to!)
 - 19-07-2005 fixed: Program bookmarks with ' in them screwed up.
 - 19-07-2005 updated: swedish strings.xml (thanks limit) and italian strings.xml (thanks kotix)
 - 19-07-2005 fixed: External dvdplayer couldn't be based off Q:
 - 19-07-2005 fixed: Couldn't alter volume while paused.
 - 19-07-2005 changed: Minor cleanup of system info.
 - 19-07-2005 fixed: Karaoke with paplayer + reduced mic delay.