@@ -5,6 +5,11 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 24-07-2005 added: initial support for syncing interlaced output to interlaced display (enable in settings).
+                     Issues: - no good way to find out if a frame is interlaced in mplayer, (syncs when not needed)
+                             - causes huge framedrops when playing ntsc video on pal system without pal60
+                             - audio/video desync on some files
+                             - can only be used when using the "Original Size" zoom mode
  - 23-07-2005 fixed: direct opening of SMB files if no SMB authentication information is in the url
  - 22-07-2005 updated: German language file
  - 22-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
